fixed spacing header section

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -18,11 +18,6 @@ button {
     width: 274px;
 }
 
-.work.col-6 img {
-    width: 150px;
-    opacity: 0.8;
-}
-
 .work img {
     width: 250px;
     opacity: 0.8;
